--- a/templates/products/product-list.html
+++ b/templates/products/product-list.html
@@ -6,18 +6,36 @@
 {% endblock css %}
 
 {% block content %}
+    <div class="categories">
+        <h3>Categories</h3>
+        <ul>
+            <li>
+                <a href="{% url 'product_list' %}">
+                    All
+                </a>
+            </li>
+            {% for category in categories %}
+                <li>
+                    <a href="{{ category.get_absolute_url }}">
+                        {{ category.name }}
+                    </a>
+                </li>
+            {% empty %}
+                <li>No Category yet.</li>
+            {% endfor %}
+        </ul>
+    </div>
 
     <h2>Product List</h2>
-
     <main class="grid">
-        {% for product in product_list %}
+        {% for product in products %}
             <article>
                 <img src="{{ product.image.url }}" alt="Sample photo">
                 <div class="text">
                     <h3>{{ product.name }}</h3>
                     <p>{{ product.description }}</p>
                 </div>
-                <a href="/products/{{ product.id }}">
+                <a href="{{ product.get_absolute_url }}">
                     <button>Detail</button>
                 </a>
             </article>
