--- a/templates/products/product-detail.html
+++ b/templates/products/product-detail.html
@@ -22,16 +22,16 @@
                         <div class="photo-album">
                             <ul>
                                 <li><img
-                                        src="https://res.cloudinary.com/john-mantas/image/upload/v1537302064/codepen/delicious-apples/green-apple2.png"
+                                        src="{{ product.image.url }}"
                                         alt="green apple"></li>
                                 <li><img
-                                        src="https://res.cloudinary.com/john-mantas/image/upload/v1537303532/codepen/delicious-apples/half-apple.png"
+                                        src="{{ product.image.url }}"
                                         alt="half apple"></li>
                                 <li><img
-                                        src="https://res.cloudinary.com/john-mantas/image/upload/v1537303160/codepen/delicious-apples/green-apple-flipped.png"
+                                        src="{{ product.image.url }}"
                                         alt="green apple"></li>
                                 <li><img
-                                        src="https://res.cloudinary.com/john-mantas/image/upload/v1537303708/codepen/delicious-apples/apple-top.png"
+                                        src="{{ product.image.url }}"
                                         alt="apple top"></li>
                             </ul>
                         </div>
