--- a/templates/home.html
+++ b/templates/home.html
@@ -3,23 +3,35 @@
 {% block title %}Home Page{% endblock title %}
 
 {% block content %}
-    <h2>Home</h2>
-    {% if user.is_authenticated %}
-        <p>You are welcome on Home Page</p>
-        <a href="/products">Products</a>
-        <br>
-        <br>
-        <p>Your name is - {{ user.first_name }} {{ user.last_name }}</p>
-        <p>Your email is - {{ user.email }}</p>
-        <p>Your email is - {{ user.username }}</p>
-        <p>Your gender is - {{ user.profile.gender }}</p>
-        <br>
-        <a href="{% url 'profile' user.id %}">Edit Profile</a>
-        <br><br>
-        <a href="{% url 'logout' %}">Logout</a>
-    {% else %}
-        <a href="{% url 'login' %}">Login</a>
-        <br><br>
-        <a href="{% url 'signup' %}">Sign Up</a>
-    {% endif %}
+    <div style="display: flex; flex-direction: column;align-items: center">
+        <h2>Home</h2>
+        {% if user.is_authenticated %}
+            <div>
+                <p>You are welcome on Home Page</p>
+
+            </div>
+            <br>
+            <br>
+            <div>
+                <p>Your name is - {{ user.first_name }} {{ user.last_name }}</p>
+                <p>Your email is - {{ user.email }}</p>
+                <p>Your email is - {{ user.username }}</p>
+                <p>Your gender is - {{ user.profile.gender }}</p>
+            </div>
+            <br>
+            <div>
+
+                <a href="{% url 'profile' user.id %}">Edit Profile</a>
+                <br><br><a href="/products"><h2>Products</h2></a>
+
+                <a href="{% url 'logout' %}">Logout</a>
+            </div>
+        {% else %}
+            <div>
+                <a href="{% url 'login' %}">Login</a>
+                <br><br>
+                <a href="{% url 'signup' %}">Sign Up</a>
+            </div>
+        {% endif %}
+    </div>
 {% endblock content %}
